--- a/style.css
+++ b/style.css
@@ -38,9 +38,15 @@ html,body{
     font-weight: 100;
     display: flex;
     gap: 2px;
-    padding-left: 5px;
+    padding: 0 10px;
     align-items: center;
     cursor: pointer;
+}
+.first_nav_elem:first-child{
+    font-size: 10px;
+}
+.first_nav_elem:last-child{
+    border-right: none;
 }
 .first_nav_elem a{
     text-decoration: none;
@@ -71,11 +77,12 @@ html,body{
     gap: 10px;
     color: #004670;
     font-weight: 900;
-    font-size: 17px;
+    font-size: 14px;
+    padding-left: 30px;
 }
 .call_of_paper_div{
     width: 120px;
-    height: 30px;
+    height: 35px;
     background-color: #00FF2A;
     display: flex;
     align-items: center;
@@ -87,8 +94,8 @@ html,body{
     color: #000;
 }
 .online_admission_div{
-    width: 200px;
-    height: 30px;
+    width: 190px;
+    height: 35px;
     background-color: #00FF2A;
     display: flex;
     align-items: center;
@@ -531,11 +538,107 @@ html,body{
 .priniciple_notice_description1{
     width: 60%;
     height: 100%;
+    border: 1px solid #029FB2;
+}
+.message_from_Principal{
+    width: 100%;
+    height: 30px;
     background-color: #029FB2;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    color: #fff;
+    font-size: 15px;
+} 
+.Principal_image_message{
+    width: 100%;
+    height: calc(100% - 30px - 40%);
+    display: flex;
+    margin-right: 10px;
+}
+.Principal_image_message .div1{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    padding-top: 20px;
+}
+.Principal_image_message .div1 img{
+    width: 80%;
+    height: 90%;
+    object-fit: cover;
+}
+.Principal_image_message .div2{
+    width: 70%;
+    height: 100%;
+    padding-top: 30px;
+    padding-right: 20px;
+}
+.Principal_image_message .div2 p{
+    line-height: 28px;
+    padding-top: 30px;
+    font-size: 16px;
+}
+.message{
+    width: 100%;
+    height: 40%;
+    padding-left: 20px;
+    padding-top: 8px;
+}
+.message p{
+    line-height: 28px;
+}
+.message span a{
+    text-decoration: none;
+    color: #029FB2;
+    cursor: pointer;
+    font-size: 15px;
+}
+.message span a:active{
+    border: 1.5px dotted #029FB2;
 }
 .priniciple_notice_description2{
     width: 37%;
     height: 100%;
+    background-color: #029FB2;
+    border: 1px solid #029FB2;
+}
+.subdiv_principal_notice_description1{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    padding-top: 5px;
+}
+.subdiv_principal_notice_description1 h4{
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 10px;
+    cursor: pointer;
+    height: 100%;
+    font-weight: lighter;
+}
+.subdiv_principal_notice_description1 h4:first-child{
+    background-color: #fff;
+    color: #029FB2;
+}
+.subdiv_principal_notice_description1 h4:hover{
+    background-color: #fff;
+    color: #029FB2;
+}
+.subdiv_principal_notice_description2{
+    width: 100%;
+    height: calc(100% - 50px);
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+.subdiv_principal_notice_description3{
+    width: 95%;
+    height: 90%;
+    margin-top: 40px;
     background-color: #029FB2;
 }
 .nacc_visit_year_outer_layer{
@@ -553,7 +656,7 @@ html,body{
     display: flex;
     align-items: center;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 17px;
     color: #029FB2;
     padding-left: 20px;
 }
@@ -591,9 +694,115 @@ html,body{
     width: 100%;
     height: 430px;
     background-color: #006D80;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #fff;
+    font-weight: 700;
+}
+.location{
+    width: 31%;
+    height: 100%;
+    padding-top: 40px;
+}
+.location .find_us{
+    width: 100%;
+    height: 40px;
+    background-color: #1A7C8D;
+    border: 2px solid #88c0ca;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+.mail_visitor_box{
+    width: 31%;
+    height: 100%;
+    padding-top: 40px;
+}
+.mail_visitor_box .nabadwip_vidyasagar_college{
+    width: 100%;
+    height: 40px;
+    background-color: #1A7C8D;
+    border: 2px solid #88c0ca;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    margin-bottom: 30px;
+}
+.mail_location_contact{
+    width: 100%;
+    height: 150px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 300;
+}
+#location{
+    width: 100%;
+    height: 50px;
+}
+#contact{
+    width: 100%;
+    height: 50px;
+}
+#mail{
+    width: 100%;
+    height: 50px;
+}
+.number_of_visitor{
+    width: 100%;
+    height: 40px;
+    background-color: #1A7C8D;
+    border: 2px solid #88c0ca;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    padding-left: 20px;
+}
+.quick_links{
+    width: 31%;
+    height: 100%;
+    padding-top: 40px;
+}
+.quick_links #quick_links{
+    width: 100%;
+    height: 40px;
+    background-color: #1A7C8D;
+    border: 2px solid #1A7C8D;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+.links{
+    margin-top: 10px;
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+}
+.link{
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-bottom: 1px solid #0e5a68;
+}
+.links a{
+    text-decoration: none;
+    color: #dadada;
+    font-size: 15px;
+    font-weight: lighter;
+}
+.links i{
+    font-size: 13px;
+    font-weight: lighter;
+    cursor: pointer;
 }
 .copyrignt_box{
     width: 100%;
     height: 40px;
-    background-color: #338A99;
+    background-color: #1A7C8D;
+    font-size: 12px;
+    color: #dadada;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
 }
