--- a/nirf/nirf.css
+++ b/nirf/nirf.css
@@ -115,6 +115,18 @@ body {
   cursor: pointer;
   position: relative;
   z-index: 9;
+  display: flex;
+}
+.second_nav>i{
+    color: #fff;
+    font-size: 25px;
+    font-weight: 900;
+    margin-left: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    border: 2px solid #fff;
+    display: none;
 }
 .header #icon1 {
   position: absolute;
@@ -687,7 +699,7 @@ body {
   padding-left: 10px;
   color: #fff;
   font-size: 20px;
-  font-weight: 00;
+  font-weight: 700;
 }
 .nirf_pdf {
   width: 95%;
