--- a/online_admission_page/admission_portal.css
+++ b/online_admission_page/admission_portal.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: sans-serif;
 }
 html,body{
@@ -15,6 +16,8 @@ html,body{
 .main{
     width: 100%;
     height: 92%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .main_left_part{
@@ -26,11 +29,18 @@ html,body{
     height: 14%;
     background-color: #05386B;
     color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 23px;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     text-align: center;
     font-weight: 600;
     text-transform: uppercase;
@@ -44,8 +54,12 @@ html,body{
     width: 100%;
     height: 11.1%;
     border-bottom: 1px solid #dadada;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-left: 30px;
 }
 .section a{
@@ -56,7 +70,8 @@ html,body{
 }
 .section i{
     color: #000;
-    filter: blur(0.5px);
+    -webkit-filter: blur(0.5px);
+            filter: blur(0.5px);
     font-weight: lighter;
     margin-right: 10px;
     font-size: 18px;
@@ -73,10 +88,18 @@ html,body{
     width: 100%;
     height: 10%;
     color: red;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 20px;
     padding-left: 90px;
+}
+.helpline_part span::-moz-selection{
+    color: #fff;
+    background-color: #000;
 }
 .helpline_part span::selection{
     color: #fff;
@@ -85,6 +108,8 @@ html,body{
 .header_part{
     width: 100%;
     height: 8%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background-color: #039EE1;
 }
@@ -102,30 +127,55 @@ html,body{
     width: 24%;
     height: 100%;
     background-color: #4678A1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .header_part2{
     width: 16%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .header_part3{
     width: 20%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .main_part{
     width: 100%;
     height: 82%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 30px;
 }
 .ug_section{
@@ -133,10 +183,19 @@ html,body{
     height: 80px;
     margin-top: 35px;
     background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .ug_section a{
     text-decoration: none;
@@ -153,10 +212,19 @@ html,body{
     width: 95%;
     height: 80px;
     background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .pg_section a{
     text-decoration: none;
@@ -172,14 +240,27 @@ html,body{
 .footer{
     width: 100%;
     height: 8%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background-color: #002B46;
     font-size: 14px;
     font-weight: 500;
     line-height: 22px;
+}
+.footer span::-moz-selection{
+    color: #fff;
+    background-color: transparent;
 }
 .footer span::selection{
     color: #fff;
@@ -187,8 +268,71 @@ html,body{
 }
 #footer_span{
     color: #08A436;
-    filter: brightness(150%);
+    -webkit-filter: brightness(150%);
+            filter: brightness(150%);
 }
 #footer_last_span{
     color: #fff;
+}
+
+@media (max-width: 800px) {
+    .page{
+        width: 100vw;
+        height: 100vh;
+    }
+    .main{
+        width: 100%;
+        height: 92%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+    }
+    .main_left_part{
+        width: 40%;
+    }
+    .heading_section{
+        width: 100%;
+        height: 8%;
+        padding: 0 9px;
+    }
+    .main_section{
+        width: 100%;
+        height: 40%;
+    }
+    .main_right_part{
+        width: 60%;
+    }
+    .helpline_part{
+        width: 100%;
+        height: 8%;
+        font-size: 15px;
+        padding-left: 50px;
+        font-weight: 600;
+    }
+    .header_part{
+        width: 100%;
+        height: 5%;
+    }
+    .header_part a{
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+    .header_part1{
+        width: 33%;
+        height: 100%;
+        text-align: center;
+    }
+    .header_part2{
+        width: 33%;
+        height: 100%;
+        text-align: center;
+    }
+    .header_part3{
+        width: 33%;
+        height: 100%;
+        text-align: center;
+    }
 }
