--- a/online_admission_page/admission_portal.css
+++ b/online_admission_page/admission_portal.css
@@ -10,41 +10,31 @@ html,body{
     height: 100%;
 }
 .page{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 .main{
-    width: 100%;
-    height: 92%;
+    width: 100vw;
+    height: 92vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
 }
 .main_left_part{
-    width: 18%;
-    height: 100%;
+    width: 18vw;
+    height: 100vh;
 }
 .heading_section{
     width: 100%;
-    height: 14%;
+    height: 14vh;
     background-color: #05386B;
     color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    font-size: 27px;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    font-size: 23px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     font-weight: 600;
-    text-transform: uppercase;
-    padding: 0 15px;
 }
 .main_section{
     width: 100%;
@@ -238,8 +228,8 @@ html,body{
     background-color: #306985;
 }
 .footer{
-    width: 100%;
-    height: 8%;
+    width: 100vw;
+    height: 8vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -273,66 +263,4 @@ html,body{
 }
 #footer_last_span{
     color: #fff;
-}
-
-@media (max-width: 800px) {
-    .page{
-        width: 100vw;
-        height: 100vh;
-    }
-    .main{
-        width: 100%;
-        height: 92%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-    }
-    .main_left_part{
-        width: 40%;
-    }
-    .heading_section{
-        width: 100%;
-        height: 8%;
-        padding: 0 9px;
-    }
-    .main_section{
-        width: 100%;
-        height: 40%;
-    }
-    .main_right_part{
-        width: 60%;
-    }
-    .helpline_part{
-        width: 100%;
-        height: 8%;
-        font-size: 15px;
-        padding-left: 50px;
-        font-weight: 600;
-    }
-    .header_part{
-        width: 100%;
-        height: 5%;
-    }
-    .header_part a{
-        text-decoration: none;
-        color: #fff;
-        font-size: 16px;
-        font-weight: 500;
-        text-transform: uppercase;
-    }
-    .header_part1{
-        width: 33%;
-        height: 100%;
-        text-align: center;
-    }
-    .header_part2{
-        width: 33%;
-        height: 100%;
-        text-align: center;
-    }
-    .header_part3{
-        width: 33%;
-        height: 100%;
-        text-align: center;
-    }
 }
