--- a/home/vision_mission/vision_mission.css
+++ b/home/vision_mission/vision_mission.css
@@ -242,7 +242,7 @@ body {
     display: flex;
     align-items: center;
 }
-.second_nav ul li:hover .sub_menu_1 ul li:nth-child(1) {
+.second_nav ul li:hover .sub_menu_1 ul li:nth-child(4) {
     background-color: #0e6770;
 }
 .second_nav ul li:hover .sub_menu_1 ul li:nth-child(4) {
@@ -278,9 +278,6 @@ body {
 }
 .second_nav ul li:hover .sub_menu_1 ul li:nth-child(1) {
     background-color: #029FB2;
-}
-.second_nav ul li:hover .sub_menu_1 ul li:nth-child(2) {
-    background-color: #0e6770;
 }
 .second_nav ul li:hover .sub_menu_2 ul li:nth-child(5) {
     border-bottom: none;
@@ -776,7 +773,7 @@ body {
     padding-bottom: 100px;
 }
 
-.principal_message_main {
+.Vision_Mission_main {
     width: 100%;
     height: 200px;
     display: flex;
@@ -787,7 +784,7 @@ body {
     padding-left: 15px;
 }
 
-.principal_message_heading {
+.Vision_Mission_heading {
     width: 95%;
     height: 30px;
     background: linear-gradient(to right,
@@ -834,84 +831,23 @@ body {
     margin-left: 15px;
     margin-bottom: 15px;
 }
-#message{
-    color: #294A70;
-    font-size: 14px;
-    font-weight: 700;
+.Vision_Mission_2nd_part{
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     padding-left: 15px;
-}
-#line{
-    width: 460px;
-    height: 1px;
-    margin-left: 70px;
-    margin-top: 30px;
-    background-color: #dadada;
-    opacity: 0.5;
-}
-.principal_message_2nd_part{
-    width: 100%;
-    height: auto;
-    padding: 15px 15px;
-}
-.top{
-    width: 100%;
-    height: 350px;
-    display: flex;
-}
-.image{
-    width:300px;
-    height:300px;
-    margin-top: 15px;
-}
-.image img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.paragraph{
-    width: calc( 100% - 300px);
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-left: 20px;
-    gap: 25px;
-    padding-bottom: 20px;
-    padding-right: 15px;
-}
-.paragraph p{
     font-size: 14px;
-    line-height:22px;
+    line-height: 27px;
     opacity: 0.9;
-    font-weight: 400;
+    columns: #dadada;
 }
-.down{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-left: 20px;
-    gap: 25px;
-    padding-bottom: 20px;
-    padding-right: 15px;
+.Vision_Mission_2nd_part ul{
+    padding-left: 18px;
 }
-.down p{
-    font-size: 14px;
-    line-height:22px;
-    opacity: 0.9;
-    font-weight: 400;
-}
-.down p:nth-child(7){
-    margin-bottom: -22px;
-    opacity: 0.8;
-}
-.down p:nth-child(8){
-    margin-bottom: -22px;
-    opacity: 0.8;
-}
-.down p:last-child{
-    opacity: 0.8;
+.Vision_Mission_2nd_part ul:last-child{
+    margin-top: 20px;
 }
 .footer {
     width: 1200px;
